Environment/local/access/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-local-access
  namespace: argocd
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
